--- a/skydance-app/src/app/globals.css
+++ b/skydance-app/src/app/globals.css
@@ -28,14 +28,14 @@ body {
 h1 {
   font-family: "Aboreto", serif;
   font-size: 144px; /* optional, can match Tailwind scale */
-  line-height: 110px; /* optional */
+  line-height: 120px;
   font-weight: 700;
 }
 
 h2 {
   font-family: "Aboreto", cursive;
   font-size: 50px;
-  line-height: 120px;
+  /* line-height: 120px; */
   font-weight: 400;
 }
 
@@ -43,7 +43,7 @@ h2 {
 h3 {
   font-family: "Aboreto", cursive;
   font-size: 32px;
-  line-height: 120px;
+  /* line-height: 120px; */
   font-weight: 400;
 }
 
@@ -51,7 +51,7 @@ h3 {
 h4 {
   font-family: "Aboreto", cursive;
   font-size: 32px;
-  line-height: 110px;
+  /* line-height: 110px; */
   font-weight: 400;
 }
 
@@ -67,4 +67,9 @@ h6 {
   font-family: "Aboreto", cursive;
   font-size: 24px;
   font-weight: 500;
+}
+
+p {
+  font-family: "EB Garamond", cursive;
+  font-size: 32px;
 }
