--- a/skydance-app/src/app/globals.css
+++ b/skydance-app/src/app/globals.css
@@ -80,9 +80,14 @@ p {
   background-color: var(--bg5);
   padding: 25px;
   font-family: "Geist", sans-serif;
-  font-size: 16;
+  font-size: 16px;
+  color: #000000;
+  width: 100%;
+  border-radius: 500px;
 }
 
 .button1:hover {
-  background-color: var(--bg4);
+  background-color: var(--bg2);
+  color: white;
+  cursor: pointer;
 }
