--- a/skydance-app/src/app/globals.css
+++ b/skydance-app/src/app/globals.css
@@ -72,7 +72,7 @@ h6 {
 
 p {
   font-family: "EB Garamond", serif;
-  font-size: 32px;
+  font-size: clamp(18px, 2vw, 24px);
 }
 
 /* Stylised Buttons */
