--- a/skydance-app/src/app/globals.css
+++ b/skydance-app/src/app/globals.css
@@ -27,16 +27,16 @@ body {
 
 h1 {
   font-family: "Aboreto", serif;
-  font-size: clamp(1.75rem, 5vw + 1rem, 16rem);
+  font-size: clamp(1.75rem, 3vw + 1rem, 9rem);
   /* line-height: 120px; */
   font-weight: 700;
 }
 
 h2 {
-  font-family: "Aboreto", cursive;
+  font-family: "Marcellus", serif;
   font-size: 50px;
   /* line-height: 120px; */
-  font-weight: 400;
+  text-transform: capitalize;
 }
 
 /* H3 - Aboreto */
