--- a/skydance-app/src/app/globals.css
+++ b/skydance-app/src/app/globals.css
@@ -27,8 +27,8 @@ body {
 
 h1 {
   font-family: "Aboreto", serif;
-  font-size: clamp(1.75rem, 3vw + 1rem, 9rem);
-  /* line-height: 120px; */
+  font-size: clamp(1.75rem, 12vw + 1rem, 9rem);
+  line-height: 120px;
   font-weight: 700;
 }
 
