--- a/skydance-app/src/app/globals.css
+++ b/skydance-app/src/app/globals.css
@@ -28,7 +28,7 @@ body {
 h1 {
   font-family: "Aboreto", serif;
   font-size: clamp(1.75rem, 12vw + 1rem, 9rem);
-  line-height: 120px;
+  line-height: clamp(2rem, 10vw + 1rem, 7.5rem);
   font-weight: 700;
 }
 
