--- a/skydance-app/src/app/globals.css
+++ b/skydance-app/src/app/globals.css
@@ -70,6 +70,10 @@ h6 {
   font-weight: 500;
 }
 
+html {
+    scroll-snap-type: y mandatory;
+}
+
 p {
   font-family: "EB Garamond", serif;
   font-size: clamp(18px, 2vw, 24px);
