--- a/skydance-app/src/app/globals.css
+++ b/skydance-app/src/app/globals.css
@@ -19,6 +19,12 @@
   --accent-2: #f2f0f1;
 }
 
+a {
+  overflow-wrap: break-word;
+  word-break: break-word;
+  white-space: normal;
+}
+
 body {
   background: var(--bg1);
   color: var(--paragraph-1);
@@ -71,7 +77,7 @@ h6 {
 }
 
 html {
-    scroll-snap-type: y mandatory;
+  scroll-snap-type: y mandatory;
 }
 
 p {
@@ -83,7 +89,7 @@ p {
 .button1 {
   background-color: var(--bg5);
   padding: 25px;
-  font-family: "Geist", sans-serif;
+  font-family: "Marcellus", serif;
   font-size: 16px;
   color: #000000;
   width: 100%;
