--- a/skydance-app/src/app/globals.css
+++ b/skydance-app/src/app/globals.css
@@ -77,7 +77,7 @@ html {
 }
 
 p {
-  font-family: "EB Garamond", serif;
+  font-family: "Arimo", sans-serif;
   font-size: clamp(18px, 2vw, 24px);
 }
 
